fix GitHub link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <span class="username">@vimturtle</span>
       <a href="https://freecodecamp.org/vimturtle/">freeCodeCamp</a> &bull;
-      <a href="https://github.org/vimturtle/">GitHub</a>
+      <a href="https://github.com/vimturtle/">GitHub</a>
     </header>
     <main>
       <p class="description">
