--- a/fcc/responsive-web-design/coursera-survey-form/index.html
+++ b/fcc/responsive-web-design/coursera-survey-form/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" href="/favicon.ico" />
     <title>FCC1.2-Coursera-Survey-Form</title>
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="minireset.css" />
