--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@vimturtle &bull; freeCodeCamp</title>
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="minireset.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
