update fcc-data.json, add Repl.it profile link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header>
       <span class="username">@vimturtle</span>
       <a href="https://freecodecamp.org/vimturtle/">freeCodeCamp</a> &bull;
-      <a href="https://github.com/vimturtle/">GitHub</a>
+      <a href="https://github.com/vimturtle/">GitHub</a> &bull;
+      <a href="https://repl.it/@vimturtle/">Repl.it</a> &bull;
     </header>
     <main>
       <p class="description">
