--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span class="username">@vimturtle</span>
       <a href="https://freecodecamp.org/vimturtle/">freeCodeCamp</a> &bull;
       <a href="https://github.com/vimturtle/">GitHub</a> &bull;
-      <a href="https://repl.it/@vimturtle/">Repl.it</a> &bull;
+      <a href="https://repl.it/@vimturtle/">Repl.it</a>
     </header>
     <main>
       <p class="description">
