add Data Visualization projects

--- a/fcc/data-visualization/scatterplot/index.html
+++ b/fcc/data-visualization/scatterplot/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <title>FCC4.1-Bar-Chart</title>
+    <title>FCC4.2-Scatterplot</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Scatterplot</h1>
+    <div class="main">
+      <div class="container">
+        <div id="title">Doping in Professional Bicycle Racing</div>
+        <div>
+          [<a
+            href="https://raw.githubusercontent.com/FreeCodeCamp/ProjectReferenceData/master/cyclist-data.json"
+            >Data Source</a
+          >] &bull; [<a href="https://github.com/vimturtle/vimturtle.github.io/"
+            >Source</a
+          >]
+        </div>
+        <br />
+        <div id="chart"></div>
+      </div>
+    </div>
   </body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
