--- a/fcc/data-visualization/bar-chart/index.html
+++ b/fcc/data-visualization/bar-chart/index.html
@@ -6,10 +6,25 @@
     <link rel="icon" href="/favicon.ico" />
     <title>FCC4.1-Bar-Chart</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Bar Chart</h1>
+    <div class="main">
+      <div class="container">
+        <div id="title">United States GDP</div>
+        <div>
+          [<a
+            href="https://raw.githubusercontent.com/FreeCodeCamp/ProjectReferenceData/master/GDP-data.json"
+            >Data Source</a
+          >] &bull; [<a href="https://github.com/vimturtle/vimturtle.github.io/"
+            >Source</a
+          >]
+        </div>
+        <br />
+        <div id="chart"></div>
+      </div>
+    </div>
   </body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
